--- a/src/App.css
+++ b/src/App.css
@@ -39,33 +39,35 @@
 }
 
 .articles-container {
-    display:flex;
-    flex-wrap: wrap;
-   
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; 
+    justify-content: space-between; 
 }
+
 
 .article-preview {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 35em;
-   
+    width: 25rem;
     background-color: rgba(128, 128, 128, 0.22);
     border-radius: 9px;
     margin: 2rem;
-
 }
 
 .article-preview-image {
-    width: 30rem;
+    width: 25rem;
     padding: 1rem;
     padding-top: 2rem;
  
 }
 
 .article-preview-title {
-    width: 30rem;
+    color: black;
+    width: 20rem;
     text-align: center;
+    
 }
 
 .article-preview-topic {
