--- a/src/App.css
+++ b/src/App.css
@@ -32,17 +32,31 @@
 .logo {
     height: 6rem;
     width: auto;
+    padding-left: 1.5rem;
 }
 
 .nav-bar-link {
-    background-color: transparent;
-    color: rgba(255, 0, 0, 0.769);
-    border: none;
+    align-items: center;
+    background-color: rgb(216,55,50);
+    color: rgb(255, 255, 255);
+    border: rgb(216,55,50);
+    border-radius: 2rem;
     font-size: 1rem;
-    text-decoration: underline;
-    font-weight: 800;
-    padding: 2rem;
+    text-decoration: none;
+    font-weight: 200;
+    height: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.7rem;
+    margin-top: 3.5rem;
+    margin-right: 2.5rem;
+    transition: transform 0.3s;
 }
+
+.nav-bar-link:hover {
+    transform: scale(1.2);
+  }
 
 .articles-container {
     display: flex;
