--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,11 @@
     transform: scale(1.2);
   }
 
+.page-header {
+    text-align: center;
+    font-size: 1.5rem;
+}
+
 .articles-container {
     display: flex;
     flex-direction: row;
@@ -65,25 +70,27 @@
     justify-content: space-between; 
 }
 
-
 .article-preview {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 25rem;
-    background-color: rgba(128, 128, 128, 0.22);
-    border-radius: 9px;
+    background-color: rgba(128, 128, 128, 0.087);
     margin: 2rem;
 }
 
 .article-preview-image {
+    object-fit: cover;
+    height:18rem;
     width: 25rem;
     padding: 1rem;
-    padding-top: 2rem;
+    padding-top: 0rem;
+  
  
 }
 
 .article-preview-title {
+    font-size: 1rem;
     color: black;
     width: 20rem;
     text-align: center;
@@ -91,6 +98,8 @@
 }
 
 .article-preview-topic {
+    font-size: 0.7rem;
     color: rgba(0, 0, 0, 0.401);
+    padding-bottom: 1rem;
 }
 
