--- a/src/App.css
+++ b/src/App.css
@@ -126,3 +126,33 @@
 .article p {
     text-align: center;
 }
+
+.comment-section {
+    text-align: center;
+    border-top: 1px solid black;
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    width: 40rem;
+}
+
+.comment-card {
+    background-color: rgba(128, 128, 128, 0.105);
+    border-radius: 3rem;
+    margin-bottom: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.comment-author {
+    font-weight: 500;
+    font-size: 17px
+}
+
+.comment-body {
+    font-weight: 100;
+}
+
+.comment-votes {
+    color: grey;
+}
