--- a/src/App.css
+++ b/src/App.css
@@ -156,3 +156,18 @@
 .comment-votes {
     color: grey;
 }
+
+.vote-button {
+    margin-bottom: 1rem;
+    color: rgb(255, 255, 255);
+    background-color: rgb(216,55,50);
+    border: 1px solid rgb(216,55,50);
+    border-radius: 2rem;
+    padding: 0.5rem;
+    font-weight: 100;
+    transition: transform 0.3s;
+}
+
+.vote-button:hover {
+    transform: scale(1.2);
+  }
