--- a/src/App.css
+++ b/src/App.css
@@ -178,11 +178,14 @@
     height: 5rem;
     background-color: rgba(128, 128, 128, 0.105);
     border: none;
-    border-radius: 1rem;
+    border-radius: 2.5rem;
     margin-bottom: 1rem;
     padding-left: 1rem;
     padding-right: 1rem;
+    padding-top: 1rem;
     font-size: 15px;
+    overflow: scroll;
+    text-align: center;
   
 }
 
