--- a/src/App.css
+++ b/src/App.css
@@ -223,10 +223,37 @@
     height: 2rem;
     padding-left: 1rem;
     padding-right: 1rem;
-    padding-top: 0.5rem;
-    padding-bottom: 1.7rem;
-    margin-right: 2.5rem;
-
+    padding-top: 0.6rem;
+    margin: 1rem;
     transition: transform 0.3s;
 }
 
+.topic-button:hover {
+    transform: scale(1.2);
+  }
+
+
+.loading-text {
+    text-align: center;
+    color: grey;
+}
+
+.filter {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.filter-text {
+color: rgb(216,55,50);
+}
+
+.filter-selector {
+    border: 1px solid rgb(216,55,50);
+    color: rgb(216,55,50);
+    width: 12rem;
+    height: 1.5rem;
+    border-radius: 5rem;
+    text-align: center;
+}
